--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <title>Tic Tac Toe</title>
     <link rel="shortcut icon" href="tic-tac-toe (1).png" type="image/x-icon">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <input type="text" id="player1" placeholder="Player 1 Name">
+            <input type="text" id="player2" placeholder="Player 2 Name">
+            <button class="start-btn">Start Game</button>
+            <button class="restart-btn">Restart Game</button>
+
+            <div id="message"></div>
+            <div id="result-display"></div>
+        </div>
+        <div class="board">
+            <div class="playBoard">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
