--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 <body>
     <div class="container">
+        
         <div class="header">
-            <input type="text" id="player1" placeholder="Player 1 Name">
-            <input type="text" id="player2" placeholder="Player 2 Name">
-            <button class="start-btn">Start Game</button>
-            <button class="restart-btn">Restart Game</button>
-
+            <h1 class="title">Tic Tac Toe</h1>
+            <div class="input-container">
+                <input type="text" id="player1" placeholder="Player 1 Name" required>
+                <input type="text" id="player2" placeholder="Player 2 Name" required>
+                <button class="start-btn">Start Game</button>
+                <button class="restart-btn">Restart Game</button>
+    
+            </div>
             <div id="message"></div>
-            <div id="result-display"></div>
         </div>
         <div class="board">
             <div class="playBoard">
